new_tests/semantics/type/bad/070_RT1.cm

class A {}
def a:Int = 5
retype a = new A()
